# Non-Hallucinating-RAG-ChatBot

./: .gitignore  Makefile  README.md  output.txt  pyproject.toml  x.json
assets/kb_data/botid/: botid_kb.feather  botid_tfidf.pkl
assets/kb_data/botid/files/: Basic_Conversation_BotInfo_Canadawills.csv  Expanded_Canandawills_FAQ.csv  greetings.csv
config/: bot.py  log.py
src/api/: bot.py  main.py
src/config/: bot.py
src/core/focused/: botEngine.py
src/core/focused/vectorizers/: factory.py  tfidfvectorgenerator.py
src/db/: bot.py
src/kb/: kb.py  web_collector.py
src/util/: dir.py  exception.py  logger.py
