[tool.poetry]
name = "qna"
version = "0.1.0"
description = ""
authors = ["Adarsh Jha <tech.adarshjha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9.6"
faiss-cpu = "1.9.0"
Flask = "3.0.3"
nltk = "3.9.1"
numpy = "2.0.2"
pandas = "2.2.3"
scikit-learn = "1.5.2"
fastapi = "^0.115.2"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
